lab1/Test/L1-A-10-97.output
Error Type A at Line 14
Error Type A at Line 24
Error Type B at Line 33
Error Type B at Line 36
Error Type A at Line 45
